make styling look like website

--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -146,7 +146,7 @@
 
       <p id='moreInfo'>
         Your feedback and email address will be sent to uProxy.org. Your logs and email may include personally identifiable information.
-        <uproxy-faq-link anchor='logging'>
+        <uproxy-faq-link anchor='doesUproxyLogData'>
           <core-icon icon="help"></core-icon>
         </uproxy-faq-link>
       </p>
