--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-      <uproxy-faq-link anchor='learnMore'>
+      <uproxy-faq-link anchor='whatIsUproxy'>
         Learn more about uProxy
       </uproxy-faq-link>
     </div>
@@ -112,7 +112,7 @@
           We won't share your data or post publicly without your consent
         </p>
       </div>
-      <uproxy-faq-link anchor='social'>
+      <uproxy-faq-link anchor='whyDoesUproxyConnect'>
         Learn more about social networks
       </uproxy-faq-link>
     </div>
