--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -1,50 +1,147 @@
-<!-- TODO (lucyhe): Add real content to this FAQ. -->
-
 <html>
   <head>
-    <title>uProxy FAQ</title>
-    <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
-    <style type='text/css'>
-      body {
-        margin: 50px;
+  <title>uProxy FAQ</title>
+  <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
+  <style type='text/css'>
+    body {
+        margin: 200px;
         font-family: Roboto, sans-serif;
-      }
-    </style>
+    }
+    @font-face {
+        font-family: Quicksand;
+        src: url(fonts/Quicksand-Regular.ttf);
+        font-weight:400;
+    }
+    @font-face {
+        font-family: Lato
+        src: url(fonts/Lato-Light.ttf);
+        font-weight:300;
+    }
+    h2 {
+      font-family: "Quicksand", sans-serif;
+      color: #191818;
+      width: 70%;
+      margin: 0 auto;
+      font-size: 36px;
+      line-height: 50px;
+      margin-bottom: 10px;
+      text-align: center;
+      padding: 0 0 30px;
+    }
+    h4 {
+      text-align: left;
+      color: #909090;
+      font-size: 15px;
+      line-height: 25px;
+      font-weight: 400;
+      text-transform: none;
+      letter-spacing: 0;
+      margin: 0 0 25px;
+      padding: 0;
+    }
+    p {
+      text-align: left;
+      color: #909090;
+      font-size: 21px;
+      line-height: 32px;
+      padding: 10px 0 0;
+      font-family: "Lato", sans-serif;
+      font-weight: 300;
+    }
+    a {
+      color: #2a2a2a;
+      border-bottom: none;
+    }
+    h4 a {
+      border-bottom: 1px dotted #ccc;
+    }
+  </style>
   </head>
 
   <body>
-    <h2 id="learnMore">What is uProxy?</h2>
-    <p>uProxy is an open source browser extension for Chrome and Firefox that lets users share their route to the Internet with each other. uProxy can make it much harder for a third party to monitor or interfere with the traffic of the user who is getting access. It's like a personalised VPN service that you can use to provide secure access to friends and family, and to yourself, when you travel.</p>
 
-    <h2 id="getShare">What does "get access" and "share access" mean?</h2>
-    <p>When you are <b>getting access</b> from a friend, all the web traffic from your browser first travels encrypted to your friend's computer and from there, to the Internet. This means that, to most websites, the request will appear to be coming from your friend's computer, and someone monitoring your connection will only see that you have a secure connection to your friend.</p>
-    <p>When you are <b>sharing access</b>, friends you authorize will be able to send their web traffic to your machine and from there to the Internet. Each device a user owns must be explicitly authorized by the sharer, before it is able to connect, and authorization can be revoked at any time.</p>
+  <center><img src="icons/128_online.png" style="height: 140px; width: 140px"></center>
 
-    <h2 id="sharerAccess">When I am sharing access, what does the other party have access to?</h2>
-    <p>Users who are getting access from your machine are only able to access the Internet. They cannot look at files on your computer, see what you're doing on the Internet, or log into websites using your identity. They also cannot access devices on your local home or work network.</p>
+  <p style="font-family: 'Quicksand'; font-size: 18px; line-height: 32px; text-align: left; color: black;">
+    <a href="#whatIsUproxy">What is uProxy?</a><br>
+    <a href="#doesUproxyLogData">Does uProxy log data about me?</a><br>
+    <a href="#whatDoGetAccess">What do "get access" and "share access" mean?</a><br>
+    <a href="#whenIAmSharingAccess">When I am sharing access, what does the other party have access to?</a><br>
+    <a href="#whyDoesUproxyConnect">Why does uProxy connect to social networks?</a><br>
+    <a href="#howDoesUproxyHelp">How does uProxy help protect my Internet connection?</a><br>
+    <a href="#whyIsItImportant">Why is it important that I trust the people I am connecting to?</a><br>
+    <a href="#doesUproxyGiveMe">Does uProxy give me anonymity online?</a><br>
+    <a href="#whatIsntProxied">What isn't proxied, and can uProxy leak information about the sites I visit?</a><br>
+    <a href="#whyIsUproxyLaunched">Why is uProxy launched for trusted testers only to start?</a>
+    <a href="#whoMadeUproxy">Who made uProxy?</a><br>
+  </p>
 
-    <h2 id="social">Why does uProxy connect to social networks?</h2>
-    <p>uProxy needs a way to see when your friends are online, and it needs to exchange information, to know how to connect with them. Instead of running a central service that could be easily blocked, uProxy uses social networks that you and your friends are already using. <b>uProxy will never post publicly on your behalf.</b> It only exchanges private messages with friends of yours who are also running uProxy.</p>
+ <section id="whatIsUproxy">
+      <h2>What is uProxy?</h2>
+      <p>uProxy is an open source browser extension for Chrome and Firefox that lets users share their route to the Internet with each other. uProxy can make it much harder for a third party to monitor or interfere with the traffic of the user who is getting access. It's like a personalised VPN service that you can use to provide secure access to friends and family, and to yourself, when you travel.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+  </section>
 
-    <h2 id="protect">How does uProxy help protect my Internet connection?</h2>
-    <p>The connection between a user and their friend is encrypted and secure from interference. For example, if Bob is getting access from Alice, and they're in different countries, then Bob's ISP (or anyone else who can monitor his connection) will not be able to see what Bob is doing on the Internet or interfere with his ability to connect to websites securely. But, if Alice's computer is in an insecure location, Bob will not necessarily be making his Internet connection any more private or secure by connecting through her.</p>
+  <section id="doesUproxyLogData">
+      <h2>Does uProxy log data about me?</h2>
+      <p>No logs are sent to or collected on a server, unless a user chooses to submit logs from their current session as part of a bug report (feedback). Logs may contain personally identifiable information (PII). PII is never shared outside the uProxy team, and PII (and the logs that contain it) are it is only retained for at most three months, before being deleted.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+    </section>
 
-    <h2 id="trust">Why is it important that I trust the people I am connecting with?</h2>
-    <p>uProxy is designed to be used to connect friends, and there are risks to both both access getters and sharers, if they connect to people they don't trust. If you get access from a friend who is malicious, they may be able to spy on your web browsing or execute a man-in-the-middle attack on your connections to secure sites. If you share access with someone you don't know, they may be able to use your connection to engage in illegal activity, and depending on the laws in your country, you may be responsible for facilitating that activity. Also, if you are using uProxy to get access to the Internet from a friend, you have to trust that your friend's Internet connection is secure.</p>
+  <section id="whatDoGetAccess">
+      <h2>What do "get access" and "share access" mean?</h2>
+      <p>When you are <b>getting access</b> from a friend, all the web traffic from your browser first travels encrypted to your friend's computer and from there, to the Internet. This means that, to most websites, the request will appear to be coming from your friend's computer, and someone monitoring your connection will only see that you have a secure connection to your friend.</p>
+      <p>When you are <b>sharing access</b>, authorized friends will be able to send their web traffic to your machine and from there to the Internet. Each device a user owns must be explicitly authorized by the sharer, before is able to connect, and authorization can be revoked at any time.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+  </section>
 
-    <h2 id="anonymity">Does uProxy give me anonymity online?</h2>
-    <p>uProxy is not an anonymity service; it is useful for concealing your browsing from your ISP, but not for hiding your identity from the sites you visit. A website visited by someone who is getting access via uProxy will be able to see the IP address of the person who is sharing access, and the website may be able to discover the IP address of the uProxy user who is getting access.</p>
+  <section id="whenIAmSharingAccess">
+      <h2>When I am sharing access, what does the other party have access to?</h2>
+      <p>Users who are getting access from your machine are only able to access the Internet. They cannot look at files on your computer, see what you're doing on the Internet, or log into websites using your identity. They also cannot access devices on your local home or work network.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+  </section>
 
-    <h2 id="proxiedData">What isn't proxied, and can uProxy leak information about the sites you visit?</h2>
-    <p>uProxy only proxies traffic for the web browser it is running in and not for other applications, like email programs. In addition, some browser extensions may not use uProxy for all their traffic. Flash is the most common example of this, and users who are concerned about Flash leaking the identity of the sites they visit should disable Flash in their browser (instructions for Chrome and Firefox). WebRTC is also not proxied, though use of WebRTC in web pages is relatively rare (it's used mostly for peer-to-peer applications, like chat). In addition, some DNS requests may not be proxied, which could leak information about the sites a user is trying to visit.</p>
+  <section id="whyDoesUproxyConnect">
+      <h2>Why does uProxy connect to social networks?</h2>
+      <p>uProxy needs a way to see when your friends are online, and it needs to exchange information, to know how to connect with them. Instead of running a central service that could be easily blocked, uProxy uses social networks that you and your friends are already using. <b>uProxy will never post publicly on your behalf.</b> It only exchanges private messages with friends of yours who are also running uProxy.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+  </section>
 
-    <h2 id="logging">Does uProxy log data about me?</h2>
-    <p>No logs are sent to or collected on a server, unless a user chooses to submit logs from their current session as part of a bug report (feedback). Logs may contain personally identifiable information (PII). PII is never shared outside the uProxy team, and PII (and the logs that contain it) are it is only retained for at most three months, before being deleted.</p>
+    <section id="howDoesUproxyHelp">
+      <h2>How does uProxy help protect my Internet connection?</h2>
+      <p>The connection between a user and their friend is encrypted and secure from interference. For example, if Bob is getting access from Alice, and they're in different countries, then Bob's ISP (or anyone else who can monitor his connection) will not be able to see what Bob is doing on the Internet or interfere with his ability to connect to websites securely. But, if Alice's computer is in an insecure location, Bob will not necessarily be making his Internet connection any more private or secure by connecting through her.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+    </section>
 
-    <h2 id="who">Who made uProxy?</h2>
-    <p>uProxy is being developed by the University of Washington. The project was seeded by Google Ideas and has received contributions from Google, Brave New Software, and the open source community.</p>
+    <section id="whyIsItImportant">
+      <h2>Why is it important that I trust the people I am connecting to?</h2>
+      <p>uProxy is designed to be used to connect friends, and there are risks to both both access getters and sharers, if they connect to people they don't trust. If you get access from a friend who is malicious, they may be able to spy on your web browsing or execute a man-in-the-middle attack on your connections to secure sites. If you share access with someone you don't know, they may be able to use your connection to engage in illegal activity, and depending on the laws in your country, you may be responsible for facilitating that activity. Also, if you are using uProxy to get access to the Internet from a friend, it is important to trust that your friend's Internet connection is secure.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+    </section>
 
-    <h2 id="trustedTesters">Why is uProxy launched for trusted testers only to start with? </h2>
-    <p>The researchers at the University of Washington are working to make uProxy as secure and private as it can be. uProxy's trusted tester programme is intended to get user feedback and fix bugs before releasing it more widely.</p>
+    <section id="doesUproxyGiveMe">
+      <h2>Does uProxy give me anonymity online?</h2>
+      <p>uProxy is not an anonymity service; it is useful for concealing your browsing from your ISP, but not for hiding your identity from the sites you visit. A website visited by someone who is getting access via uProxy will be able to see the IP address of the person who is sharing access, and the website may be able to discover the IP address of the uProxy user who is getting access.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+    </section>
+
+    <section id="whatIsntProxied">
+      <h2>What isn't proxied, and can uProxy leak information about the sites I visit?</h2>
+      <p>uProxy is an http proxy. It only proxies traffic for the web browser it is running in and not for other applications, like email programs. In addition, some browser extensions may not use uProxy for all their traffic. Flash is the most common example of this, and users who are concerned about Flash leaking the identity of the sites they visit should disable Flash in their browser (instructions for Chrome and Firefox).  WebRTC is also not proxied, though use of WebRTC in web pages is relatively rare (it's used mostly for peer-to-peer applications, like chat). In addition, some DNS requests may not be proxied, which could leak information about the sites a user is trying to visit.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+    </section>
+
+    <section id="whyIsUproxyLaunched">
+      <h2>Why is uProxy launched for trusted testers only to start?</h2>
+      <p>Researchers at the University of Washington are working to make uProxy as secure and private as it can be. uProxy's trusted tester programme is intended to get user feedback and fix bugs before releasing it more widely.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+    </section>
+
+    <section id="whoMadeUproxy">
+      <h2>Who made uProxy?</h2>
+      <p>uProxy is being developed by the University of Washington. The project was seeded by Google Ideas and has received contributions from Google, Brave New Software, and the open source community.</p>
+      <br><br><h4><a href="faq.html">Back to top</a></h4>
+    </section>
+
   </body>
 </html>
