--- a/src/generic_ui/polymer/instance.html
+++ b/src/generic_ui/polymer/instance.html
@@ -39,7 +39,7 @@
     </style>
 
     <div id='wrapper' class='{{ instance.isOnline ? "online" : "offline" }}'
-         hidden?='{{globalSettings.mode!=uProxy.Mode.GET}}'>
+         hidden?='{{model.globalSettings.mode!=uProxy.Mode.GET}}'>
 
       <p id='description' hidden?='{{ !instance.description }}'>
         {{ instance.description }}
