--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -74,7 +74,7 @@
 
       <!-- uProxy contacts offering access to or requesting access from user -->
       <uproxy-roster-group
-          groupTitle='{{globalSettings.mode==uProxy.Mode.GET ? "Offers" : "Requests"}}'
+          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Offers" : "Requests"}}'
           onlineContacts='{{ onlinePending }}'
           offlineContacts='{{ offlinePending }}'
           searchQuery='{{ searchQuery }}'
@@ -86,7 +86,7 @@
 
       <!-- trusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='{{globalSettings.mode==uProxy.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
+          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
           onlineContacts='{{ onlineTrustedUproxyContacts }}'
           offlineContacts='{{ offlineTrustedUproxyContacts }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
