--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -86,7 +86,7 @@
 
       <!-- trusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
+          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Friends you trust" : "Friends who can get access from you"}}'
           onlineContacts='{{ onlineTrustedUproxyContacts }}'
           offlineContacts='{{ offlineTrustedUproxyContacts }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
