Show scrollbars whenever scrolling is available
This removes our hiding of webkit scrollbars in the universal case and
re-enables hiding of cross-browser scrollbars in the case where they are
not needed.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -24,9 +24,6 @@
         text-align: left;
         color: rgb(112, 112, 112);
       }
-      ::-webkit-scrollbar {
-        display: none;
-      }
       paper-tab {
         cursor: pointer;
       }
@@ -107,7 +104,7 @@
         display: block;
       }
       #roster-panel {
-        overflow: scroll;
+        overflow: auto;
       }
       #status {
         width: 100%;
