style and copy change

--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -74,52 +74,52 @@
 
   <body>
 
-  <center><img src="icons/128_online.png" style="height: 140px; width: 140px"></center>
+    <center><img src="icons/128_online.png" style="height: 140px; width: 140px"></center>
 
-  <p style="font-family: 'Quicksand'; font-size: 18px; line-height: 32px; text-align: left; color: black;">
-    <a href="#whatIsUproxy">What is uProxy?</a><br>
-    <a href="#doesUproxyLogData">Does uProxy log data about me?</a><br>
-    <a href="#whatDoGetAccess">What do "get access" and "share access" mean?</a><br>
-    <a href="#whenIAmSharingAccess">When I am sharing access, what does the other party have access to?</a><br>
-    <a href="#whyDoesUproxyConnect">Why does uProxy connect to social networks?</a><br>
-    <a href="#howDoesUproxyHelp">How does uProxy help protect my Internet connection?</a><br>
-    <a href="#whyIsItImportant">Why is it important that I trust the people I am connecting to?</a><br>
-    <a href="#doesUproxyGiveMe">Does uProxy give me anonymity online?</a><br>
-    <a href="#whatIsntProxied">What isn't proxied, and can uProxy leak information about the sites I visit?</a><br>
-    <a href="#whyIsUproxyLaunched">Why is uProxy launched for trusted testers only to start?</a><br>
-    <a href="#whoMadeUproxy">Who made uProxy?</a><br>
-  </p>
+    <p style="font-family: 'Quicksand'; font-size: 18px; line-height: 32px; text-align: left; color: black;">
+      <a href="#whatIsUproxy">What is uProxy?</a><br>
+      <a href="#doesUproxyLogData">Does uProxy log data about me?</a><br>
+      <a href="#whatDoGetAccess">What do "get access" and "share access" mean?</a><br>
+      <a href="#whenIAmSharingAccess">When I am sharing access, what does the other party have access to?</a><br>
+      <a href="#whyDoesUproxyConnect">Why does uProxy connect to social networks?</a><br>
+      <a href="#howDoesUproxyHelp">How does uProxy help protect my Internet connection?</a><br>
+      <a href="#whyIsItImportant">Why is it important that I trust the people I am connecting to?</a><br>
+      <a href="#doesUproxyGiveMe">Does uProxy give me anonymity online?</a><br>
+      <a href="#whatIsntProxied">What isn't proxied, and can uProxy leak information about the sites I visit?</a><br>
+      <a href="#whyIsUproxyLaunched">Why is uProxy launched for trusted testers only to start?</a><br>
+      <a href="#whoMadeUproxy">Who made uProxy?</a><br>
+    </p>
 
- <section id="whatIsUproxy">
+    <section id="whatIsUproxy">
       <h2>What is uProxy?</h2>
       <p>uProxy is an open source browser extension for Chrome and Firefox that lets users share their route to the Internet with each other. uProxy can make it much harder for a third party to monitor or interfere with the traffic of the user who is getting access. It's like a personalised VPN service that you can use to provide secure access to friends and family, and to yourself, when you travel.</p>
       <br><br><h4><a href="faq.html">Back to top</a></h4>
-  </section>
+    </section>
 
-  <section id="doesUproxyLogData">
+    <section id="doesUproxyLogData">
       <h2>Does uProxy log data about me?</h2>
-      <p>No logs are sent to or collected on a server, unless a user chooses to submit logs from their current session as part of a bug report (feedback). Logs may contain personally identifiable information (PII). PII is never shared outside the uProxy team, and PII (and the logs that contain it) are it is only retained for at most three months, before being deleted.</p>
+      <p>No logs are sent to or collected on a server, unless a user chooses to submit logs from their current session as part of a bug report (feedback). Logs may contain personally identifiable information (PII). PII is never shared outside the uProxy team, and the logs that contain it are retained for at most three months, before being deleted.</p>
       <br><br><h4><a href="faq.html">Back to top</a></h4>
     </section>
 
-  <section id="whatDoGetAccess">
+    <section id="whatDoGetAccess">
       <h2>What do "get access" and "share access" mean?</h2>
       <p>When you are <b>getting access</b> from a friend, all the web traffic from your browser first travels encrypted to your friend's computer and from there, to the Internet. This means that, to most websites, the request will appear to be coming from your friend's computer, and someone monitoring your connection will only see that you have a secure connection to your friend.</p>
       <p>When you are <b>sharing access</b>, authorized friends will be able to send their web traffic to your machine and from there to the Internet. Each device a user owns must be explicitly authorized by the sharer, before is able to connect, and authorization can be revoked at any time.</p>
       <br><br><h4><a href="faq.html">Back to top</a></h4>
-  </section>
+    </section>
 
-  <section id="whenIAmSharingAccess">
+    <section id="whenIAmSharingAccess">
       <h2>When I am sharing access, what does the other party have access to?</h2>
       <p>Users who are getting access from your machine are only able to access the Internet. They cannot look at files on your computer, see what you're doing on the Internet, or log into websites using your identity. They also cannot access devices on your local home or work network.</p>
       <br><br><h4><a href="faq.html">Back to top</a></h4>
-  </section>
+    </section>
 
-  <section id="whyDoesUproxyConnect">
+    <section id="whyDoesUproxyConnect">
       <h2>Why does uProxy connect to social networks?</h2>
       <p>uProxy needs a way to see when your friends are online, and it needs to exchange information, to know how to connect with them. Instead of running a central service that could be easily blocked, uProxy uses social networks that you and your friends are already using. <b>uProxy will never post publicly on your behalf.</b> It only exchanges private messages with friends of yours who are also running uProxy.</p>
       <br><br><h4><a href="faq.html">Back to top</a></h4>
-  </section>
+    </section>
 
     <section id="howDoesUproxyHelp">
       <h2>How does uProxy help protect my Internet connection?</h2>
