--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -4,18 +4,23 @@
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
   <style type='text/css'>
     body {
-        width: 60%;
-        margin: 200px auto;
-        font-family: Roboto, sans-serif;
+      width: 60%;
+      margin: 100px auto;
+      font-family: Roboto, sans-serif;
     }
     @font-face {
-        font-family: Quicksand;
-        src: url(fonts/Quicksand-Regular.ttf);
+      font-family: Quicksand;
+      src: url(fonts/Quicksand-Regular.ttf);
     }
     @font-face {
-        font-family: Lato;
-        src: url(fonts/Lato-Light.ttf);
-        font-weight:300;
+      font-family: Quicksand;
+      src: url(fonts/Quicksand-Bold.ttf);
+      font-weight:700;
+    }
+    @font-face {
+      font-family: Lato;
+      src: url(fonts/Lato-Light.ttf);
+      font-weight:300;
     }
     h2 {
       font-family: "Quicksand", sans-serif;
@@ -74,7 +79,10 @@
 
   <body>
 
-    <center><img src="icons/128_online.png" style="height: 140px; width: 140px"></center>
+    <center>
+      <img src="icons/128_online.png" style="height: 140px; width: 140px">
+      <h2 style="padding-top: 12px; color: #10c9b1; font-weight: 700; letter-spacing: -1px; font-size: 40px;">u<span style="color: #19aa9b">Proxy FAQ</span></h2>
+    </center>
 
     <p style="font-family: 'Quicksand'; font-size: 18px; line-height: 32px; text-align: left; color: black;">
       <a href="#whatIsUproxy">What is uProxy?</a><br>
