--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -66,6 +66,9 @@
       font-family: "Lato", sans-serif;
       font-weight: 300;
     }
+    p b {
+      color: #10c9b1;
+    }
     a {
       color: #2a2a2a;
       text-decoration: none;
