--- a/src/generic_ui/polymer/app-bar.html
+++ b/src/generic_ui/polymer/app-bar.html
@@ -1,7 +1,7 @@
 <link rel='import' href='../lib/polymer/polymer.html'>
 <link rel='import' href='../lib/paper-button/paper-button.html'>
 
-<polymer-element name='uproxy-app-bar' attributes='disableback'>
+<polymer-element name='uproxy-app-bar' attributes='disableback' center horizontal layout>
   <template>
     <style>
     :host {
@@ -11,19 +11,17 @@
       background: #009688;
       color: white;
       font-size: 20px;
-      font-weight: 500;
+      font-weight: 400;
       text-align: left;
       box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.13);
     }
     core-icon.back {
       cursor: pointer;
-      height: 19px;
-      width: 19px;
       opacity: 0.6;
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
-      margin-left: 19px;
+      margin-left: 16px;
     }
     core-icon.back:hover {
       opacity: 1;
@@ -39,7 +37,7 @@
 
     <core-icon class='back {{ { disabled: disableback } | tokenList }}' icon="arrow-back" on-tap='{{ back }}'></core-icon>
 
-    <span id='title'>
+    <span id='title' flex>
       <content></content>
     </span>
   </template>
