--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -138,9 +138,13 @@
         color: white;
         margin-bottom: 3px;
       }
-      #dialog {
+      paper-action-dialog {
         top: 150px;
         left: 0px;
+        z-index: 1002; /* Must be greater than core-overlay-backdrop */
+      }
+      .core-overlay-backdrop {
+        z-index: 1001;
       }
     </style>
 
