--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -10,6 +10,7 @@
 <link rel="import" href='roster.html'>
 <link rel="import" href='settings.html'>
 <link rel="import" href='confirm.html'>
+<link rel="import" href='logs.html'>
 <link rel='import' href='copypaste.html'>
 <link rel='import' href='bubble.html'>
 <link rel='import' href='feedback.html'>
