Add warnings. Separate get network and get logs functions.

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -140,7 +140,7 @@
         margin-bottom: 3px;
       }
       #dialog {
-        top: 150px;
+        top: 20%;
         left: 0px;
       }
     </style>
