--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -5,6 +5,7 @@
 <link rel='import' href='../lib/paper-input/paper-autogrow-textarea.html'>
 <link rel='import' href='../lib/core-label/core-label.html'>
 <link rel='import' href='../lib/core-tooltip/core-tooltip.html'>
+<link rel="import" href="../lib/core-signals/core-signals.html">
 <link rel='import' href='faq-link.html'>
 
 <polymer-element name='uproxy-feedback' attributes=''>
@@ -14,10 +15,14 @@
       text-align: center;
       font-color: #009688;  /* dark green */
     }
+    #container {
+      height: 100%;
+    }
     #formContainer {
-      margin: 30px;
+      padding: 30px;
       text-align: left;
       color: #009688;
+      overflow: auto;
     }
     .inputLabel {
       font-weight: bold;
@@ -42,9 +47,6 @@
       margin-top: 1em;
     }
     #sendFeedback {
-      position: absolute;
-      bottom: 0;
-      left: 0;
       width: 100%;
       padding-top: 1.5em;
       padding-bottom: 1.5em;
@@ -53,6 +55,7 @@
       font-weight: bold;
       cursor: pointer;
       text-align: center;
+      background-color: #ffffff;
     }
     core-icon[icon="help"]{
       height: 15px;
@@ -110,50 +113,53 @@
     }
     </style>
 
-    <uproxy-app-bar on-go-back='{{ backToSettings }}'>
-      Submit feedback
-    </uproxy-app-bar>
+    <core-signals on-core-signal-more-about-logging='{{ moreAboutLogging }}'></core-signals>
+    <core-signals on-core-signal-view-logs='{{ viewLogs }}'></core-signals>
 
-    <div id='formContainer'>
-      <p class='inputLabel'>Email (optional)</p>
-      <paper-input-decorator id='emailDecorator' label="Email address">
-        <input id="emailInput"
-               is="core-input"
-               value='{{ email }}'>
-      </paper-input-decorator>
+    <div id='container' vertical layout>
+      <uproxy-app-bar on-go-back='{{ backToSettings }}'>
+        Submit feedback
+      </uproxy-app-bar>
 
-      <p class='inputLabel'>Enter your feedback below</p>
-
-        <paper-input-decorator id='feedbackDecorator' label="Write your feedback">
-          <paper-autogrow-textarea id="feedbackPaperTextarea">
-            <textarea id="feedbackInput"
-                   value='{{ feedback }}'>
-            </textarea>
-          </paper-autogrow-textarea>
+      <div id='formContainer' flex>
+        <p class='inputLabel'>Email (optional)</p>
+        <paper-input-decorator id='emailDecorator' label="Email address">
+          <input id="emailInput"
+                 is="core-input"
+                 value='{{ email }}'>
         </paper-input-decorator>
 
-      <div id='logCheckboxContainer'>
-        <core-label id='logCheckboxLabel' horizontal layout>
-          <paper-checkbox for id='logCheckbox'></paper-checkbox>
-          Include logs and diagnostic network data
-        </core-label>
-        <core-tooltip id='logsTooltip' label='Preview' position='right'>
-          <uproxy-link on-tap='{{ viewLogs }}'>
-            <core-icon icon="launch"></core-icon>
-          </uproxy-link>
-        </core-tooltip>
+        <p class='inputLabel'>Enter your feedback below</p>
+
+          <paper-input-decorator id='feedbackDecorator' label="Write your feedback">
+            <paper-autogrow-textarea id="feedbackPaperTextarea">
+              <textarea id="feedbackInput"
+                     value='{{ feedback }}'>
+              </textarea>
+            </paper-autogrow-textarea>
+          </paper-input-decorator>
+
+        <div id='logCheckboxContainer'>
+          <core-label id='logCheckboxLabel' horizontal layout>
+            <paper-checkbox id='logCheckbox' on-change='{{ logsToggled }}'></paper-checkbox>
+            Include logs and diagnostic network data
+          </core-label>
+          <core-tooltip id='logsTooltip' label='Preview' position='top'>
+            <uproxy-link on-tap='{{ confirmViewLogs }}'>
+              <core-icon icon="launch"></core-icon>
+            </uproxy-link>
+          </core-tooltip>
+        </div>
+
+        <p id='moreInfo'>
+          Your feedback and email address will be sent to uProxy.org. Your logs, diagnostic network data and email may include personally identifiable information.
+          <uproxy-faq-link anchor='doesUproxyLogData'>
+            <core-icon icon="help"></core-icon>
+          </uproxy-faq-link>
+        </p>
       </div>
-
-      <p id='moreInfo'>
-        Your feedback and email address will be sent to uProxy.org. Your logs, diagnostic network data and email may include personally identifiable information.
-        <uproxy-faq-link anchor='doesUproxyLogData'>
-          <core-icon icon="help"></core-icon>
-        </uproxy-faq-link>
-      </p>
-
       <div id='sendFeedback' on-tap='{{ sendFeedback }}'>SEND FEEDBACK</div>
     </div>
-
   </template>
   <script src='feedback.js'></script>
 </polymer-element>
