Hide overflow on contact names
Fixes #1174

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -49,6 +49,8 @@
       font-size: 16px;
       color: rgba(0,0,0,0.87);
       padding-left: 18px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .accessIcon {
       padding-right: 18px;
