Add reconnect, for Chrome only, not yet using refresh_tokens

--- a/src/generic_ui/polymer/root.html
+++ b/src/generic_ui/polymer/root.html
@@ -15,6 +15,7 @@
 <link rel='import' href='copypaste.html'>
 <link rel='import' href='bubble.html'>
 <link rel='import' href='feedback.html'>
+<link rel='import' href='reconnect.html'>
 <link rel='import' href='troubleshoot.html'>
 <link rel='import' href='browser-elements.html'>
 
@@ -249,6 +250,8 @@
     </paper-action-dialog>
 
     <uproxy-troubleshoot></uproxy-troubleshoot>
+
+    <uproxy-reconnect></uproxy-reconnect>
 
   </template>
 
