--- a/src/generic_ui/polymer/settings.html
+++ b/src/generic_ui/polymer/settings.html
@@ -152,7 +152,7 @@
 
         <hr>
 
-        <uproxy-link on-tap='{{ restart }}' hidden?='{{ browser !== "chrome" }}' role='button'>
+        <uproxy-link on-tap='{{ restart }}' hidden?='{{ ui.browser !== "chrome" }}' role='button'>
           <core-icon icon="refresh"></core-icon>
           Restart
         </uproxy-link>
