Changes for code review

--- a/src/generic_ui/polymer/reconnect.html
+++ b/src/generic_ui/polymer/reconnect.html
@@ -34,7 +34,7 @@
     </style>
 
     <paper-dialog backdrop opened='{{ model.reconnecting }}'
-        layered='false' id='reconnectDialog'>
+        layered='false' id='reconnectDialog' autoCloseDisabled='true'>
       <div>
         <p>Attempting to re-connect.</p>
         <paper-progress indeterminate='true'></paper-progress>
