Fix view logs in Firefox

--- a/src/generic_ui/faq.html
+++ b/src/generic_ui/faq.html
@@ -139,7 +139,7 @@
 
     <section id="whyIsItImportant">
       <h2>Why is it important that I trust the people I am connecting to?</h2>
-      <p>uProxy is designed to be used to connect friends, and there are risks to both both access getters and sharers, if they connect to people they don't trust. If you get access from a friend who is malicious, they may be able to spy on your web browsing or execute a man-in-the-middle attack on your connections to secure sites. If you share access with someone you don't know, they may be able to use your connection to engage in illegal activity, and depending on the laws in your country, you may be responsible for facilitating that activity. Also, if you are using uProxy to get access to the Internet from a friend, it is important to trust that your friend's Internet connection is secure.</p>
+      <p>uProxy is designed to be used to connect friends, and there are risks to both getters and sharers, if they connect to people they don't trust. If you get access from a friend who is malicious, they may be able to spy on your web browsing or execute a man-in-the-middle attack on your connections to secure sites. If you share access with someone you don't know, they may be able to use your connection to engage in illegal activity, and depending on the laws in your country, you may be responsible for facilitating that activity. Also, if you are using uProxy to get access to the Internet from a friend, it is important to trust that your friend's Internet connection is secure.</p>
       <br><br><h4><a href="faq.html">Back to top</a></h4>
     </section>
 
@@ -151,7 +151,7 @@
 
     <section id="whatIsntProxied">
       <h2>What isn't proxied, and can uProxy leak information about the sites I visit?</h2>
-      <p>uProxy is an http proxy. It only proxies traffic for the web browser it is running in and not for other applications, like email programs. In addition, some browser extensions may not use uProxy for all their traffic. Flash is the most common example of this, and users who are concerned about Flash leaking the identity of the sites they visit should disable Flash in their browser (instructions for Chrome and Firefox).  WebRTC is also not proxied, though use of WebRTC in web pages is relatively rare (it's used mostly for peer-to-peer applications, like chat). In addition, some DNS requests may not be proxied, which could leak information about the sites a user is trying to visit.</p>
+      <p>uProxy only proxies traffic for the web browser it is running in and not for other applications, like email programs. In addition, some browser extensions may not use uProxy for all their traffic. Flash is the most common example of this, and users who are concerned about Flash leaking the identity of the sites they visit should disable Flash in their browser (instructions for Chrome and Firefox).  WebRTC is also not proxied, though use of WebRTC in web pages is relatively rare (it's used mostly for peer-to-peer applications, like chat). In addition, some DNS requests may not be proxied, which could leak information about the sites a user is trying to visit.</p>
       <br><br><h4><a href="faq.html">Back to top</a></h4>
     </section>
 
