--- a/src/generic_ui/view-logs.html
+++ b/src/generic_ui/view-logs.html
@@ -3,17 +3,15 @@
 <head>
   <title>uProxy Logs</title>
 
-  <script src='scripts/uproxy.js'></script>
-  <script src='scripts/user.js'></script>
-  <script src='scripts/ui.js'></script>
-  <script src='scripts/dependencies.js'></script>
+  <script src='lib/webcomponentsjs/webcomponents.min.js'></script>
+  <script src='scripts/disconnected.js'></script>
 
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
   <link rel='import' href='polymer/vulcanized.html'>
 </head>
 
 <body>
-  <uproxy-logs></uproxy-logs>
+  <uproxy-logs logs=""></uproxy-logs>
 </body>
 
 </html>
