--- a/src/generic_ui/view-logs.html
+++ b/src/generic_ui/view-logs.html
@@ -4,7 +4,7 @@
   <title>uProxy Logs</title>
 
   <script src='lib/webcomponentsjs/webcomponents.min.js'></script>
-  <script src='scripts/disconnected.js'></script>
+  <script src='scripts/get_logs.js'></script>
 
   <link href='fonts/Roboto.css' rel='stylesheet' type='text/css'>
   <link rel='import' href='polymer/vulcanized.html'>
