Break word in <pre> in FF; update promiseId

--- a/src/generic_ui/polymer/logs.html
+++ b/src/generic_ui/polymer/logs.html
@@ -36,10 +36,15 @@
       #logs {
         font-family: monospace;
         font-size: 14px;
-        word-wrap: break-word;
         text-align: left;
         padding: 10px;
         background: lightgray;
+      }
+      pre {
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;  /* Firefox */
+        white-space: -o-pre-wrap;    /* Firefox */
+        word-wrap: break-word;
       }
       h1 {
         margin-bottom: 1em;
