--- a/src/generic_ui/polymer/feedback.html
+++ b/src/generic_ui/polymer/feedback.html
@@ -1,13 +1,13 @@
-<link rel='import' href='../lib/polymer/polymer.html'>
-<link rel='import' href='../lib/paper-button/paper-button.html'>
-<link rel='import' href='../lib/paper-checkbox/paper-checkbox.html'>
-<link rel='import' href='../lib/paper-input/paper-input-decorator.html'>
-<link rel='import' href='../lib/paper-input/paper-autogrow-textarea.html'>
-<link rel='import' href='../lib/core-label/core-label.html'>
-<link rel='import' href='../lib/paper-dialog/paper-action-dialog.html'>
-<link rel='import' href='../lib/core-tooltip/core-tooltip.html'>
-<link rel='import' href='../lib/core-overlay/core-overlay.html'>
-<link rel='import' href='../lib/core-signals/core-signals.html'>
+<link rel='import' href='../../../../../third_party/bower/polymer/polymer.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-button/paper-button.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-checkbox/paper-checkbox.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-input/paper-input-decorator.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-input/paper-autogrow-textarea.html'>
+<link rel='import' href='../../../../../third_party/bower/core-label/core-label.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-dialog/paper-action-dialog.html'>
+<link rel='import' href='../../../../../third_party/bower/core-tooltip/core-tooltip.html'>
+<link rel='import' href='../../../../../third_party/bower/core-overlay/core-overlay.html'>
+<link rel='import' href='../../../../../third_party/bower/core-signals/core-signals.html'>
 <link rel='import' href='faq-link.html'>
 
 <polymer-element name='uproxy-feedback' attributes=''>
