--- a/src/generic_ui/polymer/logs.html
+++ b/src/generic_ui/polymer/logs.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../lib/polymer/polymer.html">
-<link rel='import' href='../lib/paper-progress/paper-progress.html'>
+<link rel="import" href="../../../../../third_party/bower/polymer/polymer.html">
+<link rel='import' href='../../../../../third_party/bower/paper-progress/paper-progress.html'>
 
 <polymer-element name='uproxy-logs'>
   <template>
