--- a/src/generic_ui/polymer/reconnect.html
+++ b/src/generic_ui/polymer/reconnect.html
@@ -1,7 +1,7 @@
-<link rel='import' href='../lib/polymer/polymer.html'>
-<link rel='import' href='../lib/paper-button/paper-button.html'>
-<link rel='import' href='../lib/paper-dialog/paper-dialog.html'>
-<link rel='import' href='../lib/paper-progress/paper-progress.html'>
+<link rel='import' href='../../../../../third_party/bower/polymer/polymer.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-button/paper-button.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-dialog/paper-dialog.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-progress/paper-progress.html'>
 
 <polymer-element name='uproxy-reconnect'>
   <template>
