--- a/src/generic_ui/polymer/roster.html
+++ b/src/generic_ui/polymer/roster.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../lib/polymer/polymer.html">
-<link rel='import' href='../lib/paper-progress/paper-progress.html'>
-<link rel="import" href="../lib/core-signals/core-signals.html">
-<link rel="import" href="../lib/core-icons/social-icons.html">
+<link rel="import" href="../../../../../third_party/bower/polymer/polymer.html">
+<link rel='import' href='../../../../../third_party/bower/paper-progress/paper-progress.html'>
+<link rel="import" href="../../../../../third_party/bower/core-signals/core-signals.html">
+<link rel="import" href="../../../../../third_party/bower/core-icons/social-icons.html">
 <link rel='import' href='roster-group.html'>
 
 <polymer-element name='uproxy-roster' attributes='contacts'>
@@ -80,7 +80,7 @@
 
       <!-- uProxy contacts offering access to or requesting access from user -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Offers" : "Requests"}}'
+          groupTitle='{{model.globalSettings.mode==ui_constants.Mode.GET ? "Offers" : "Requests"}}'
           onlineContacts='{{ contacts.onlinePending }}'
           offlineContacts='{{ contacts.offlinePending }}'
           searchQuery='{{ searchQuery }}'
@@ -92,7 +92,7 @@
 
       <!-- trusted uProxy contacts -->
       <uproxy-roster-group
-          groupTitle='{{model.globalSettings.mode==uProxy.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
+          groupTitle='{{model.globalSettings.mode==ui_constants.Mode.GET ? "Friends you can get access from" : "Friends who can get access from you"}}'
           onlineContacts='{{ contacts.onlineTrustedUproxy }}'
           offlineContacts='{{ contacts.offlineTrustedUproxy }}'
           searchQuery='{{ searchQuery }}'></uproxy-roster-group>
