--- a/src/generic_ui/polymer/splash.html
+++ b/src/generic_ui/polymer/splash.html
@@ -1,5 +1,5 @@
-<link rel='import' href='../lib/polymer/polymer.html'>
-<link rel='import' href='../lib/paper-button/paper-button.html'>
+<link rel='import' href='../../../../../third_party/bower/polymer/polymer.html'>
+<link rel='import' href='../../../../../third_party/bower/paper-button/paper-button.html'>
 <link rel='import' href='faq-link.html'>
 <link rel='import' href='network.html'>
 
